--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ requires-python = "==3.12.7"
 dependencies = [
     "bibtexparser>=1.4.2",
     "chardet>=5.2.0",
+    "nltk>=3.9.1",
+    "pip>=24.3.1",
     "spacy>=3.8.2",
-    "unidecode>=1.3.8",
 ]
 
 [dependency-groups]
