--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,9 @@
 bibtexparser==1.4.2
 chardet==5.2.0
 click==8.1.7
-colorama==0.4.6 ; platform_system == 'Windows'
+colorama==0.4.6
 joblib==1.4.2
 nltk==3.9.1
-pip==24.3.1
 pyparsing==3.2.0
 regex==2024.11.6
 tqdm==4.67.1
